--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root{
     --header-color: lightblue;
+    --card-color: lightgray;
 }
 
 html, body, :root, .primary-container{
@@ -36,4 +37,17 @@ html, body, :root, .primary-container{
 
     justify-content: center;
     align-items: center;
+}
+
+.content-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-rows: repeat(auto-fill, 300px);
+    margin: 50px;
+}
+
+.book-card{
+    background-color: var(--card-color);
+    border: 1px solid black;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, .3);
 }
