--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 html, body, :root, .primary-container{
-    height: 100%;
+    min-height: 100%;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -17,7 +17,7 @@ html, body, :root, .primary-container{
 
 .header-container{
     background-color: var(--header-color);
-    height: 100%;
+    min-height: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
@@ -42,12 +42,50 @@ html, body, :root, .primary-container{
 .content-container{
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-template-rows: repeat(auto-fill, 300px);
+    grid-template-rows: 300px;
     margin: 50px;
+    gap: 50px;
 }
 
 .book-card{
     background-color: var(--card-color);
     border: 1px solid black;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, .3);
+    height: 300px;
+}
+
+.book-input-modal{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    background-color: burlywood;
+    border: 1px black solid;
+    top: 25%;
+    margin: auto;
+    left: 25%;
+    right: 25%;
+    max-width: fit-content;
+    min-width: fit-content;
+}
+
+.hidden{
+    visibility: hidden;    
+}
+
+.modal-title-container{
+    display: flex;
+    font-weight: bold;
+    font-size: large;
+    border: 1px black solid;
+    width: 100%;
+    margin-bottom: 15px;
+    justify-content: space-between;
+}
+
+.modal-button-container{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
 }
