--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ html, body, :root, .primary-container{
 
 .hidden{
     visibility: hidden;    
-    animation: fade 2s linear;
+    animation: visibility fade 2s linear;
 }
 
 .modal-title-container{
