fixed issue where page count was coming up undefined

--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ html, body, :root, .primary-container{
 .book-card>.book-title{
     font-weight: bold;
     font-size: 1.5rem;
+    text-align: center;
 }
 
 .book-card>.autho-author{
